force-app/main/default/objects/Leader__c/Leader__c.object-meta.xml
<CustomObject>
    <label>Leader</label>
    <pluralLabel>Leaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Leader Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>