force-app/main/default/objects/Leader__c/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <label>Background</label>
    <type>Text</type>
    <length>255</length>
</CustomField>