force-app/main/default/objects/Leader__c/fields/Personality__c.field-meta.xml
<CustomField>
    <fullName>Personality__c</fullName>
    <label>Personality</label>
    <type>Text</type>
    <length>255</length>
</CustomField>