force-app/main/default/objects/Leader__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <label>Picture</label>
    <type>Text</type>
    <length>255</length>
</CustomField>