force-app/main/default/objects/Leader__c/fields/Prestige__c.field-meta.xml
<CustomField>
    <fullName>Prestige__c</fullName>
    <label>Prestige</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>